# gnotes-linux

./: .env.example  AI.txt  LINUX.md  PLAN.md  README.md  UPSTREAM.md  package-lock.json  package.json
.github/workflows/: deploy-pages.yml  linux-build.yml
docs/: DEVELOPMENT.md  OVERVIEW.md  index.html
reviews/: LINUX_IMPLEMENTATION_PLAN.md  NEMOTRON_LINUX_NATIVE_REVIEW.md
scripts/: generate-docs.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  gnotes.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: notes.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/window/: manager.rs  mod.rs
src/components/: Editor.tsx  NoteWindow.tsx  TitleBar.tsx  Toolbar.tsx
src/stores/: noteStore.ts
