[package]
name = "gnotes-linux"
version = "0.1.0"
description = "Cross-platform sticky notes with custom backgrounds and shapes"
authors = ["gnotes"]
edition = "2021"

[lib]
name = "gnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
